Add README and add more info to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "si7021"
 version = "0.0.1"
 authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]
 description = "I2C driver for the Si7021 hygrometer and thermometer"
-license = "MIT/Apache-2.0"
+documentation = "https://docs.rs/si7021"
 repository = "https://github.com/klemens/si7021-rs"
+readme = "README.md"
+categories = ["embedded", "hardware-support"]
+license = "Apache-2.0/MIT"
 
 [dependencies]
 byteorder = "1"
